--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,11 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/orange_500"
+            android:minHeight="?attr/actionBarSize"
             android:visibility="gone"
-            app:title="Animals"
-            app:titleTextColor="@color/white" />
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:title="Chelsea App"
+            app:titleTextColor="@color/blue_1000" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
